--- a/src/pages/episodes/3.md
+++ b/src/pages/episodes/3.md
@@ -2,7 +2,7 @@
 title: "#3 yukicoderと競プロ"
 date: "2018-05-07T00:00:01+09:00"
 audio:
-  url: ""
+  url: "https://storage.googleapis.com/tofu-ninjin/ep-003.mp3"
 ---
 
 ニコニコ生放送で配信したものをアーカイブ化したものです
