Set speakers to episode frontmatter

--- a/src/pages/episodes/4.md
+++ b/src/pages/episodes/4.md
@@ -3,6 +3,9 @@ title: "#4 無職生活"
 date: "2018-05-19T00:00:00+09:00"
 audio:
   url: "https://storage.googleapis.com/tofu-ninjin/ep-004.mp3"
+speakers:
+  - diginatu
+  - y0za
 ---
 
 ニコニコ生放送で配信したものをアーカイブ化したものです
