--- a/src/pages/episodes/2.md
+++ b/src/pages/episodes/2.md
@@ -3,6 +3,9 @@ title: "#2 東京での新社会人生活"
 date: "2018-05-07T00:00:00+09:00"
 audio:
   url: "https://storage.googleapis.com/tofu-ninjin/ep-002.mp3"
+speakers:
+  - diginatu
+  - y0za
 ---
 
 ニコニコ生放送で配信したものをアーカイブ化したものです
