--- a/src/pages/episodes/4.md
+++ b/src/pages/episodes/4.md
@@ -1,6 +1,10 @@
 ---
 title: "#4 無職生活"
 date: "2018-05-19T00:00:00+09:00"
+topics:
+  - 無職生活
+  - 電子決済
+  - 技術書典
 audio:
   url: "https://storage.googleapis.com/tofu-ninjin/ep-004.mp3"
 speakers:
