--- a/src/pages/episodes/3.md
+++ b/src/pages/episodes/3.md
@@ -1,6 +1,10 @@
 ---
 title: "#3 yukicoderと競プロ"
 date: "2018-05-07T00:00:01+09:00"
+topics:
+  - yukicoder
+  - Xamarin
+  - Ubuntu GNOME
 audio:
   url: "https://storage.googleapis.com/tofu-ninjin/ep-003.mp3"
 speakers:
