--- a/src/pages/episodes/5.md
+++ b/src/pages/episodes/5.md
@@ -1,6 +1,10 @@
 ---
 title: "#5 ReactNativeを触っている新社会人"
 date: "2018-06-05T00:00:00+09:00"
+topics:
+  - ReactNative
+  - 心理的安全性
+  - バーチャルYoutuber
 audio:
   url: "https://storage.googleapis.com/tofu-ninjin/ep-005.mp3"
 speakers:
