Add audio duration to episode markdown frontmatter

--- a/src/pages/episodes/3.md
+++ b/src/pages/episodes/3.md
@@ -7,6 +7,7 @@ topics:
   - Ubuntu GNOME
 audio:
   url: "https://storage.googleapis.com/tofu-ninjin/ep-003.mp3"
+  duration: "2:27:14"
 speakers:
   - yuki2006
   - diginatu
