--- a/src/pages/episodes/4.md
+++ b/src/pages/episodes/4.md
@@ -7,6 +7,7 @@ topics:
   - 技術書典
 audio:
   url: "https://storage.googleapis.com/tofu-ninjin/ep-004.mp3"
+  duration: "1:10:47"
 speakers:
   - diginatu
   - y0za
