--- a/src/pages/episodes/2.md
+++ b/src/pages/episodes/2.md
@@ -7,6 +7,7 @@ topics:
   - TypeScript
 audio:
   url: "https://storage.googleapis.com/tofu-ninjin/ep-002.mp3"
+  duration: "1:57:40"
 speakers:
   - diginatu
   - y0za
