--- a/src/pages/episodes/5.md
+++ b/src/pages/episodes/5.md
@@ -7,6 +7,7 @@ topics:
   - バーチャルYoutuber
 audio:
   url: "https://storage.googleapis.com/tofu-ninjin/ep-005.mp3"
+  duration: "1:40:05"
 speakers:
   - maxmellon
   - diginatu
