Fix episode 7 show notes

--- a/src/pages/episodes/7.md
+++ b/src/pages/episodes/7.md
@@ -19,7 +19,7 @@ speakers:
 ※録音ミスで20分くらいから少し話が飛んでいます
 
 ## Show Notes
-- サマータイムを導入に関してどう思うか
+- サマータイム導入に関してどう思うか
   - [夏時間 - Wikipedia](https://ja.wikipedia.org/wiki/%E5%A4%8F%E6%99%82%E9%96%93)
   - [サマータイム導入検討、自民党が9月に議連発足へ　2020年の実施視野に](http://www.itmedia.co.jp/news/articles/1808/27/news055.html)
   - [Clock changes: EU backs ending daylight saving time](https://www.bbc.com/news/world-europe-45366390)
